--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/cart.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
     <div class="cart-contain active">
@@ -20,14 +21,16 @@
                 </ul>
                 <div class="buy-btn" disable>
                 </div>
+                <a href="index.html" class="back-home">
+                    <i class="fa-solid fa-rectangle-xmark"></i>
+                </a>
             </div>    
             </div> 
         </div>
+        
     </div>
 
-    <a href="index.html" class="back-home">
-        <i class="fa-solid fa-rectangle-xmark"></i>
-    </a>
+    
     <!-- Phiếu xác nhận  -->
 
     <div class="cart-contain buy">
